--- a/style.css
+++ b/style.css
@@ -1,30 +1,72 @@
+html {
+  background-color: #484848;
+  margin-left: calc(100vw - 100%);
+  overflow-x: hidden;
+}
 body {
   font-family: 'Ubuntu', sans-serif;
-  font-size: 18px;
-  max-width: 900px;
-  margin-left: auto;
-  margin-right: auto;
+  font-size: 16px;
+  line-height: 20px;
+  max-width: 800px;
+  margin: 40px auto;
   text-align: justify;
-  color: #333333;
-  }
+  color: #acacac;
+  background-color: #343434;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  box-shadow: 15px 15px 30px 8px rgba(0, 0, 0, 0.729);
+}
 
-h2,h3,h5,h6 {
-  color: #2f80ed;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+a {
+  text-decoration: none;
+  color: #cdcdcd;
+  text-decoration: underline rgba(205,205,205,0);
+  transition: 0.3s;
+}
+a:visited {
+  color: #cdcdcd;
+}
+a:hover {
+  color: #cdcdcd;
+  transition: 0.3s;
+  text-decoration: underline;
+}
+h1 {
+  font-size: 2.5rem;
+}
+h4 {
+  font-size: 1.5rem;
 }
 .code {
-  background-color: #d5e5fb;
+  background-color: #090909;
+  font-size: 14px;
 }
-.footer {
-  padding: 10px;
-  text-align: center;
-  font-size: 32px;
+.title {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  padding-left: 20px;
 }
 .photo {
   margin-left: auto;
-  align-self:center;
+  align-self: center;
+  padding: 30px 20px 0 0;
+
+}
+.photo img {
+  height: 150px;
+  border-radius: 3%;
+  background: linear-gradient(#484848, #343434);
 }
 header {
   display: flex;
+  height: 150px;
 }
 ul.hr {
   margin: 0;
@@ -39,4 +81,60 @@ ul.hr li:hover {
 }
 ul.hr li a::before {
   content: "#";
+}
+main {
+  display: flex;
+  justify-content: space-between;
+  padding: 0 20px 20px 20px;
+}
+.main-body {
+  width: 60%;
+}
+h2 {
+  overflow: hidden;
+  text-align: left;
+  padding: 20px 0 10px 0;
+}
+h2::after {
+    content: "";
+    display: inline-block;
+    vertical-align: middle;
+    width: 100%;
+    height: 1px;
+    background-color: #5d5d5d;
+    margin: 0 -100% 0 0;
+    position: relative;
+    left: 20px;
+}
+hr {
+  border: 1px solid #5d5d5d;
+  margin-bottom: -20px;
+}
+li {
+  list-style-position: inside;
+  margin-left: 10px;
+}
+aside {
+  width: 35%;
+}
+.footer {
+  margin: 10px;
+  text-align: center;
+  font-size: 32px;
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.footer a:hover {
+  transform: scale(1.1);
+}
+.git {
+  height: 24px;
+  filter: invert(93%) sepia(0%) saturate(709%) hue-rotate(230deg) brightness(87%) contrast(101%);
+}
+.rss {
+  height: 36px;
+  filter: invert(93%) sepia(0%) saturate(709%) hue-rotate(230deg) brightness(87%) contrast(101%);
 }
